# bernstein_flow

./: .flake8  .gitignore  .pre-commit-config.yaml  Bernstein_Bijector.ipynb  Bernstein_Bijector_Minimal.ipynb  README.md  biblio.bib  pyproject.toml  setup.py  tox.ini
.github/workflows/: bm_cml.yaml  cml.yaml  docs.yaml  of_cml.yaml  pre-commit.yaml  pytest.yaml  test.yaml
cml/: bimodal.py  develop.py  hp_bimodal.py  old_faithful.py  params.yaml  simple_tester.py
cml/metrics/bimodal/: bm_metrics.yaml
ipynb/: Bernstein_Bijector.ipynb  Bernstein_Bijector_Minimal.ipynb  Gaussian_vs_Transformation_Model.ipynb  TheoreticalBackground.ipynb  parameter_examples.ipynb
metrics/: bm_hist.csv  bm_metrics.txt  bm_pvector.txt  of_hist.csv  of_metrics.txt  of_pvector.txt
metrics/bimodal/: bm_metrics.yaml
metrics/hp_bimodal/: bm_metrics.yaml
metrics/old_faithful/: of_metrics.txt
src/bernstein_flow/: __init__.py
src/bernstein_flow/activations/: __init__.py
src/bernstein_flow/bijectors/: __init__.py  bernstein.py  bernstein_bijector.py  bernstein_extra.py
src/bernstein_flow/distributions/: __init__.py  bernstein_flow.py  bernstein_flow_dev.py
src/bernstein_flow/losses/: __init__.py  bernstein_flow_loss.py
src/bernstein_flow/math/: __init__.py  bernstein.py
src/bernstein_flow/util/: __init__.py  partial.py  visualization.py
src/bernstein_flow/util/visualization/: __init__.py  plot_flow.py
test/bijectors/: test_bernstein_bijector.py  test_bernstein_bijector_extra.py
test/distributions/: test_bernstein_flow.py
test/math/: test_bernstein.py
