[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61", "setuptools_scm>=7"]

[project]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  "tensorflow>=2.5, <2.16",
  "tensorflow_probability>=0.13, <0.24",
  "matplotlib"
]
dynamic = ["version"]
license = {text = "Apache Software License (Apache 2.0)"}
name = "bernstein_flow"
readme = "README.md"
requires-python = ">=3.7, <3.12"

[project.optional-dependencies]
develop = [
  'bernstein_flow[examples,test]',
  'ipykernel',
  'pre-commit',
  'python-lsp-ruff',
  'python-lsp-server[all]',
  'ruff'
]
examples = [
  'bernstein_flow[train]',
  'jupyterlab>=3.0.0,<4.0.0a0',
  'scikit-learn~=1.1',
  'seaborn~=0.12'
]
test = [
  'pytest',
  'pytest-xdist',
  'scipy'
]
train = [
  'pandas~=1.5',
  'PyYAML~=6.0'
]

[tool.ruff]
indent-width = 4
# Same as Black.
line-length = 88
# Assume Python 3.8
target-version = "py38"

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
ignore = []
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["I", "E", "F", "D"]
unfixable = []

[tool.setuptools_scm]
# https://stackoverflow.com/a/74404703
# omits local version, useful because pypi does not support it
local_scheme = "no-local-version"
